[package]
name = "gallery-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
dotenv = "0.15.0"
serde = "1.0.188"
anyhow = "1.0.75"
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "runtime-tokio-native-tls", "mysql" ] }
tokio = { version = "1.32.0", features = ["full"]}
