[package]
name = "gallery-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
dotenv = "0.15.0"
serde = "1.0.219"
anyhow = "1.0.98"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "runtime-tokio-native-tls", "mysql" ] }
tokio = { version = "1.46.1", features = ["full"]}
